# c2c

./: .gitignore  Dockerfile  LICENSE  README.md  how-to-add-a-new-application
SVF-2.2/: cscope.files
bitcodes/: curl.wcheckfuncs.bc  httpd.bitnami.bc  httpd.drupal.bc  httpd.drupal.wcheckfuncs.bc  lighttpd.bc  lighttpd.wcheckfuncs.bc  memcached.bc  memcached.wcheckfuncs.bc  nginx.zendserver.bc  nginx.zendserver.wcheckfuncs.bc  smtpd.default.bc  smtpd.wcheckfuncs.bc  tar.bc  tar.wcheckfuncs.bc  wget.bc  wget.wcheckfuncs.bc
callgraphs/: libGeoIP.callgraph.out  libX11.callgraph.out  libXau.callgraph.out  libXdmcp.callgraph.out  libXpm.callgraph.out  libacl.so.2.2.53.callgraph.out  libaio.callgraph.out  libapr-1.so.0.7.0.callgraph.out  libaprutil-1.callgraph.out  libattr.callgraph.out  libaudit.callgraph.out  libbsd.callgraph.out  libbsd.so.0.8.2.callgraph.out  libcap-ng.callgraph.out  libcrypto.callgraph.out  libdb.callgraph.out  libedit.0.0.63.callgraph.out  libelf.so.callgraph.out  libevent-2.1.so.11.callgraph.out  (+48 more)
src/c++/llvm-pass/src/: ACFG.cpp  ACFG.h  C2CLog.h  C2CPass.cpp  C2CPass.h  C2CPointerAnalysis.cpp  C2CPointerAnalysis.h  C2CUtils.cpp  C2CUtils.h  CMakeLists.txt  ConditionalBranch.h  ConfigDepAnalysis.cpp  ConfigDepAnalysis.h  ConfigInitInst.h  ConfigVariable.h  HeapInitFunction.cpp  HeapInitFunction.h  ModuleDebloatingPass.cpp  ModuleDebloatingPass.h  OptionMapper.cpp  OptionMapper.h  PreProcessor.cpp  PreProcessor.h  RuntimeInstrumentation.cpp  RuntimeInstrumentation.h  Statistics.cpp  Statistics.h  TemporalPass.cpp  TemporalPass.h  c2c.cpp
(+604 files in other folders)
